manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-psql-statefulset
  namespace: project
spec:
  serviceName: project-psql-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: psql-data-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "50Mi"
              cpu: "20m"
            limits:
              memory: "100Mi"
              cpu: "50m"
              
  volumeClaimTemplates:
    - metadata:
        name: psql-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: project-psql-svc
  namespace: project  
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgres


# psql postgres://psql-svc:5432 -U postgres
# kubectl run -it --rm --restart=Never --image postgres psql-for-debugging sh
