manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: project-route
  namespace: project
spec:
  parentRefs:
  - name: project-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: project-todo-app-svc
      port: 2332
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: project-todo-backend-svc
      port: 2332
